// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`listbox > passes through additional html attributes 1`] = `
<div
  class="listbox__options class1"
  data-passed-through="true"
  data-testid="AttributePassthrough"
  role="listbox"
  style="color:red"
  tabindex="0"
  type="number"
>
  <div
    class="listbox__option"
    role="option"
  >
    <span
      class="listbox__value"
    >
      Option 1
    </span>
    <svg
      aria-hidden="true"
      class="icon icon--16"
      focusable="false"
    >
      <defs>
        <symbol
          id="icon-tick-16"
          viewBox="0 0 16 16"
        >
          <path
            clip-rule="evenodd"
            d="M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"
            fill-rule="evenodd"
          />
        </symbol>
      </defs>
      <use
        href="#icon-tick-16"
      />
    </svg>
  </div>
  <div
    class="listbox__option"
    role="option"
  >
    <span
      class="listbox__value"
    >
      Option 2
    </span>
    <svg
      aria-hidden="true"
      class="icon icon--16"
      focusable="false"
    >
      <use
        href="#icon-tick-16"
      />
    </svg>
  </div>
  <div
    class="listbox__option"
    role="option"
  >
    <span
      class="listbox__value"
    >
      Option 3
    </span>
    <svg
      aria-hidden="true"
      class="icon icon--16"
      focusable="false"
    >
      <use
        href="#icon-tick-16"
      />
    </svg>
  </div>
</div>
`;

exports[`listbox > passes through additional html attributes 2`] = `
<div
  class="listbox__options class1"
  data-passed-through="true"
  data-testid="AttributePassthrough"
  role="listbox"
  style="color:red"
  tabindex="0"
  type="number"
>
  <div
    class="listbox__option"
    role="option"
  >
    <span
      class="listbox__value"
    >
      Option 1
    </span>
    <svg
      aria-hidden="true"
      class="icon icon--16"
      focusable="false"
    >
      <defs>
        <symbol
          id="icon-tick-16"
          viewBox="0 0 16 16"
        >
          <path
            clip-rule="evenodd"
            d="M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"
            fill-rule="evenodd"
          />
        </symbol>
      </defs>
      <use
        href="#icon-tick-16"
      />
    </svg>
  </div>
  <div
    class="listbox__option"
    role="option"
  >
    <span
      class="listbox__value"
    >
      Option 2
    </span>
    <svg
      aria-hidden="true"
      class="icon icon--16"
      focusable="false"
    >
      <use
        href="#icon-tick-16"
      />
    </svg>
  </div>
  <div
    class="listbox__option"
    role="option"
  >
    <span
      class="listbox__value"
    >
      Option 3
    </span>
    <svg
      aria-hidden="true"
      class="icon icon--16"
      focusable="false"
    >
      <use
        href="#icon-tick-16"
      />
    </svg>
  </div>
</div>
`;

exports[`listbox > passes through additional html attributes from child option 1`] = `
<div
  class="listbox__option class1"
  data-passed-through="true"
  data-testid="AttributePassthrough"
  role="option"
  style="color:red"
  type="number"
>
  <span
    class="listbox__value"
  />
  <svg
    aria-hidden="true"
    class="icon icon--16"
    focusable="false"
  >
    <defs>
      <symbol
        id="icon-tick-16"
        viewBox="0 0 16 16"
      >
        <path
          clip-rule="evenodd"
          d="M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"
          fill-rule="evenodd"
        />
      </symbol>
    </defs>
    <use
      href="#icon-tick-16"
    />
  </svg>
</div>
`;

exports[`listbox > passes through additional html attributes from child option 2`] = `
<div
  class="listbox__option class1"
  data-passed-through="true"
  data-testid="AttributePassthrough"
  role="option"
  style="color:red"
  type="number"
>
  <span
    class="listbox__value"
  />
  <svg
    aria-hidden="true"
    class="icon icon--16"
    focusable="false"
  >
    <defs>
      <symbol
        id="icon-tick-16"
        viewBox="0 0 16 16"
      >
        <path
          clip-rule="evenodd"
          d="M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"
          fill-rule="evenodd"
        />
      </symbol>
    </defs>
    <use
      href="#icon-tick-16"
    />
  </svg>
</div>
`;

exports[`listbox > renders basic version 1`] = `
"[36m<DocumentFragment>[39m
  [36m<div[39m
    [33mclass[39m=[32m"listbox__options"[39m
    [33mrole[39m=[32m"listbox"[39m
    [33mtabindex[39m=[32m"0"[39m
  [36m>[39m
    [36m<div[39m
      [33mclass[39m=[32m"listbox__option"[39m
      [33mrole[39m=[32m"option"[39m
    [36m>[39m
      [36m<span[39m
        [33mclass[39m=[32m"listbox__value"[39m
      [36m>[39m
        [0mOption 1[0m
      [36m</span>[39m
      [36m<svg[39m
        [33maria-hidden[39m=[32m"true"[39m
        [33mclass[39m=[32m"icon icon--16"[39m
        [33mfocusable[39m=[32m"false"[39m
      [36m>[39m
        [36m<defs>[39m
          [36m<symbol[39m
            [33mid[39m=[32m"icon-tick-16"[39m
            [33mviewBox[39m=[32m"0 0 16 16"[39m
          [36m>[39m
            [36m<path[39m
              [33mclip-rule[39m=[32m"evenodd"[39m
              [33md[39m=[32m"M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"[39m
              [33mfill-rule[39m=[32m"evenodd"[39m
            [36m/>[39m
          [36m</symbol>[39m
        [36m</defs>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-tick-16"[39m
        [36m/>[39m
      [36m</svg>[39m
    [36m</div>[39m
    [36m<div[39m
      [33mclass[39m=[32m"listbox__option"[39m
      [33mrole[39m=[32m"option"[39m
    [36m>[39m
      [36m<span[39m
        [33mclass[39m=[32m"listbox__value"[39m
      [36m>[39m
        [0mOption 2[0m
      [36m</span>[39m
      [36m<svg[39m
        [33maria-hidden[39m=[32m"true"[39m
        [33mclass[39m=[32m"icon icon--16"[39m
        [33mfocusable[39m=[32m"false"[39m
      [36m>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-tick-16"[39m
        [36m/>[39m
      [36m</svg>[39m
    [36m</div>[39m
    [36m<div[39m
      [33mclass[39m=[32m"listbox__option"[39m
      [33mrole[39m=[32m"option"[39m
    [36m>[39m
      [36m<span[39m
        [33mclass[39m=[32m"listbox__value"[39m
      [36m>[39m
        [0mOption 3[0m
      [36m</span>[39m
      [36m<svg[39m
        [33maria-hidden[39m=[32m"true"[39m
        [33mclass[39m=[32m"icon icon--16"[39m
        [33mfocusable[39m=[32m"false"[39m
      [36m>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-tick-16"[39m
        [36m/>[39m
      [36m</svg>[39m
    [36m</div>[39m
  [36m</div>[39m
  [36m<select[39m
    [33mclass[39m=[32m"listbox__native"[39m
    [33mhidden[39m=[32m""[39m
  [36m>[39m
    [36m<option[39m
      [33mvalue[39m=[32m"1"[39m
    [36m/>[39m
    [36m<option[39m
      [33mvalue[39m=[32m"2"[39m
    [36m/>[39m
    [36m<option[39m
      [33mvalue[39m=[32m"3"[39m
    [36m/>[39m
  [36m</select>[39m
[36m</DocumentFragment>[39m"
`;

exports[`listbox > renders empty 1`] = `
"[36m<DocumentFragment>[39m
  [36m<div[39m
    [33mclass[39m=[32m"listbox__options"[39m
    [33mrole[39m=[32m"listbox"[39m
    [33mtabindex[39m=[32m"0"[39m
  [36m/>[39m
  [36m<select[39m
    [33mclass[39m=[32m"listbox__native"[39m
    [33mhidden[39m=[32m""[39m
  [36m/>[39m
[36m</DocumentFragment>[39m"
`;

exports[`listbox > renders with description 1`] = `
"[36m<DocumentFragment>[39m
  [36m<div[39m
    [33mclass[39m=[32m"listbox__options"[39m
    [33mrole[39m=[32m"listbox"[39m
    [33mtabindex[39m=[32m"0"[39m
  [36m>[39m
    [36m<div[39m
      [33mclass[39m=[32m"listbox__option"[39m
      [33mrole[39m=[32m"option"[39m
    [36m>[39m
      [36m<span[39m
        [33mclass[39m=[32m"listbox__value"[39m
      [36m>[39m
        [0mOption 1[0m
      [36m</span>[39m
      [36m<span[39m
        [33mclass[39m=[32m"listbox__description"[39m
      [36m>[39m
        [0mOption 1 extra info[0m
      [36m</span>[39m
      [36m<svg[39m
        [33maria-hidden[39m=[32m"true"[39m
        [33mclass[39m=[32m"icon icon--16"[39m
        [33mfocusable[39m=[32m"false"[39m
      [36m>[39m
        [36m<defs>[39m
          [36m<symbol[39m
            [33mid[39m=[32m"icon-tick-16"[39m
            [33mviewBox[39m=[32m"0 0 16 16"[39m
          [36m>[39m
            [36m<path[39m
              [33mclip-rule[39m=[32m"evenodd"[39m
              [33md[39m=[32m"M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"[39m
              [33mfill-rule[39m=[32m"evenodd"[39m
            [36m/>[39m
          [36m</symbol>[39m
        [36m</defs>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-tick-16"[39m
        [36m/>[39m
      [36m</svg>[39m
    [36m</div>[39m
    [36m<div[39m
      [33mclass[39m=[32m"listbox__option"[39m
      [33mrole[39m=[32m"option"[39m
    [36m>[39m
      [36m<span[39m
        [33mclass[39m=[32m"listbox__value"[39m
      [36m>[39m
        [0mOption 2[0m
      [36m</span>[39m
      [36m<span[39m
        [33mclass[39m=[32m"listbox__description"[39m
      [36m>[39m
        [0mOption 2 extra info[0m
      [36m</span>[39m
      [36m<svg[39m
        [33maria-hidden[39m=[32m"true"[39m
        [33mclass[39m=[32m"icon icon--16"[39m
        [33mfocusable[39m=[32m"false"[39m
      [36m>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-tick-16"[39m
        [36m/>[39m
      [36m</svg>[39m
    [36m</div>[39m
    [36m<div[39m
      [33mclass[39m=[32m"listbox__option"[39m
      [33mrole[39m=[32m"option"[39m
    [36m>[39m
      [36m<span[39m
        [33mclass[39m=[32m"listbox__value"[39m
      [36m>[39m
        [0mOption 3[0m
      [36m</span>[39m
      [36m<span[39m
        [33mclass[39m=[32m"listbox__description"[39m
      [36m>[39m
        [0mOption 3 extra info[0m
      [36m</span>[39m
      [36m<svg[39m
        [33maria-hidden[39m=[32m"true"[39m
        [33mclass[39m=[32m"icon icon--16"[39m
        [33mfocusable[39m=[32m"false"[39m
      [36m>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-tick-16"[39m
        [36m/>[39m
      [36m</svg>[39m
    [36m</div>[39m
  [36m</div>[39m
  [36m<select[39m
    [33mclass[39m=[32m"listbox__native"[39m
    [33mhidden[39m=[32m""[39m
    [33mname[39m=[32m"formFieldName"[39m
  [36m>[39m
    [36m<option[39m
      [33mvalue[39m=[32m"1"[39m
    [36m/>[39m
    [36m<option[39m
      [33mvalue[39m=[32m"2"[39m
    [36m/>[39m
    [36m<option[39m
      [33mvalue[39m=[32m"3"[39m
    [36m/>[39m
  [36m</select>[39m
[36m</DocumentFragment>[39m"
`;

exports[`listbox > renders with second item disabled 1`] = `
"[36m<DocumentFragment>[39m
  [36m<div[39m
    [33mclass[39m=[32m"listbox__options"[39m
    [33mrole[39m=[32m"listbox"[39m
    [33mtabindex[39m=[32m"0"[39m
  [36m>[39m
    [36m<div[39m
      [33mclass[39m=[32m"listbox__option"[39m
      [33mrole[39m=[32m"option"[39m
    [36m>[39m
      [36m<span[39m
        [33mclass[39m=[32m"listbox__value"[39m
      [36m>[39m
        [0mOption 1[0m
      [36m</span>[39m
      [36m<svg[39m
        [33maria-hidden[39m=[32m"true"[39m
        [33mclass[39m=[32m"icon icon--16"[39m
        [33mfocusable[39m=[32m"false"[39m
      [36m>[39m
        [36m<defs>[39m
          [36m<symbol[39m
            [33mid[39m=[32m"icon-tick-16"[39m
            [33mviewBox[39m=[32m"0 0 16 16"[39m
          [36m>[39m
            [36m<path[39m
              [33mclip-rule[39m=[32m"evenodd"[39m
              [33md[39m=[32m"M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"[39m
              [33mfill-rule[39m=[32m"evenodd"[39m
            [36m/>[39m
          [36m</symbol>[39m
        [36m</defs>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-tick-16"[39m
        [36m/>[39m
      [36m</svg>[39m
    [36m</div>[39m
    [36m<div[39m
      [33maria-disabled[39m=[32m"true"[39m
      [33maria-selected[39m=[32m"true"[39m
      [33mclass[39m=[32m"listbox__option"[39m
      [33mrole[39m=[32m"option"[39m
      [33mtabindex[39m=[32m"-1"[39m
    [36m>[39m
      [36m<span[39m
        [33mclass[39m=[32m"listbox__value"[39m
      [36m>[39m
        [0mOption 2[0m
      [36m</span>[39m
      [36m<svg[39m
        [33maria-hidden[39m=[32m"true"[39m
        [33mclass[39m=[32m"icon icon--16"[39m
        [33mfocusable[39m=[32m"false"[39m
      [36m>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-tick-16"[39m
        [36m/>[39m
      [36m</svg>[39m
    [36m</div>[39m
    [36m<div[39m
      [33mclass[39m=[32m"listbox__option"[39m
      [33mrole[39m=[32m"option"[39m
    [36m>[39m
      [36m<span[39m
        [33mclass[39m=[32m"listbox__value"[39m
      [36m>[39m
        [0mOption 3[0m
      [36m</span>[39m
      [36m<svg[39m
        [33maria-hidden[39m=[32m"true"[39m
        [33mclass[39m=[32m"icon icon--16"[39m
        [33mfocusable[39m=[32m"false"[39m
      [36m>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-tick-16"[39m
        [36m/>[39m
      [36m</svg>[39m
    [36m</div>[39m
  [36m</div>[39m
  [36m<select[39m
    [33mclass[39m=[32m"listbox__native"[39m
    [33mhidden[39m=[32m""[39m
  [36m>[39m
    [36m<option[39m
      [33mvalue[39m=[32m"1"[39m
    [36m/>[39m
    [36m<option[39m
      [33mselected[39m=[32m""[39m
      [33mvalue[39m=[32m"2"[39m
    [36m/>[39m
    [36m<option[39m
      [33mvalue[39m=[32m"3"[39m
    [36m/>[39m
  [36m</select>[39m
[36m</DocumentFragment>[39m"
`;

exports[`listbox > renders with second item selected 1`] = `
"[36m<DocumentFragment>[39m
  [36m<div[39m
    [33mclass[39m=[32m"listbox__options"[39m
    [33mrole[39m=[32m"listbox"[39m
    [33mtabindex[39m=[32m"0"[39m
  [36m>[39m
    [36m<div[39m
      [33mclass[39m=[32m"listbox__option"[39m
      [33mrole[39m=[32m"option"[39m
    [36m>[39m
      [36m<span[39m
        [33mclass[39m=[32m"listbox__value"[39m
      [36m>[39m
        [0mOption 1[0m
      [36m</span>[39m
      [36m<svg[39m
        [33maria-hidden[39m=[32m"true"[39m
        [33mclass[39m=[32m"icon icon--16"[39m
        [33mfocusable[39m=[32m"false"[39m
      [36m>[39m
        [36m<defs>[39m
          [36m<symbol[39m
            [33mid[39m=[32m"icon-tick-16"[39m
            [33mviewBox[39m=[32m"0 0 16 16"[39m
          [36m>[39m
            [36m<path[39m
              [33mclip-rule[39m=[32m"evenodd"[39m
              [33md[39m=[32m"M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"[39m
              [33mfill-rule[39m=[32m"evenodd"[39m
            [36m/>[39m
          [36m</symbol>[39m
        [36m</defs>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-tick-16"[39m
        [36m/>[39m
      [36m</svg>[39m
    [36m</div>[39m
    [36m<div[39m
      [33maria-selected[39m=[32m"true"[39m
      [33mclass[39m=[32m"listbox__option"[39m
      [33mrole[39m=[32m"option"[39m
    [36m>[39m
      [36m<span[39m
        [33mclass[39m=[32m"listbox__value"[39m
      [36m>[39m
        [0mOption 2[0m
      [36m</span>[39m
      [36m<svg[39m
        [33maria-hidden[39m=[32m"true"[39m
        [33mclass[39m=[32m"icon icon--16"[39m
        [33mfocusable[39m=[32m"false"[39m
      [36m>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-tick-16"[39m
        [36m/>[39m
      [36m</svg>[39m
    [36m</div>[39m
    [36m<div[39m
      [33mclass[39m=[32m"listbox__option"[39m
      [33mrole[39m=[32m"option"[39m
    [36m>[39m
      [36m<span[39m
        [33mclass[39m=[32m"listbox__value"[39m
      [36m>[39m
        [0mOption 3[0m
      [36m</span>[39m
      [36m<svg[39m
        [33maria-hidden[39m=[32m"true"[39m
        [33mclass[39m=[32m"icon icon--16"[39m
        [33mfocusable[39m=[32m"false"[39m
      [36m>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-tick-16"[39m
        [36m/>[39m
      [36m</svg>[39m
    [36m</div>[39m
  [36m</div>[39m
  [36m<select[39m
    [33mclass[39m=[32m"listbox__native"[39m
    [33mhidden[39m=[32m""[39m
  [36m>[39m
    [36m<option[39m
      [33mvalue[39m=[32m"1"[39m
    [36m/>[39m
    [36m<option[39m
      [33mselected[39m=[32m""[39m
      [33mvalue[39m=[32m"2"[39m
    [36m/>[39m
    [36m<option[39m
      [33mvalue[39m=[32m"3"[39m
    [36m/>[39m
  [36m</select>[39m
[36m</DocumentFragment>[39m"
`;
